On the road to 2024.07:
Environment:
- kernel 6.10.x
- OpenSSH 9.8
- use 3cpio with zstd for multi cpio archive initramfs decompression
- updated MOTD
- optimized init.sh and login.sh
- changed eza default date colour to white
- changed dialog to new colour scheme
- added bandwhich, bottom and zoxide
- launch bandwhich on VC5 and bottom on VC6
- fixed smb filesystem
- removed not needed broadcom firmware and modules on x86_64
- removed hfs, hfsplus, isofs, nfsv2, nfsv3 and udf filesystems
- removed makepkg
cpio:
- create multi cpio archive initramfs files => up to 25% faster
  1st part: all directories
  2nd part: all already compressed files
  3rd part: zstd compressed rootfs
network:
- restart iwd on ESSID rescan
pacsetup:
- fixed fallback to http mirrors on aarch64
testsuite:
- renamed archboot-testsuite.sh to testsuite
- added stats, blockdevices, filesystems and Wi-Fi
- log to /dev/tty11 | VC11
setup:
- abort on pacman package installation error
---
Highlights 2024.06:
- systemd 256.x support
- force OpenSSH login through ttyd
- Added bat dust eza fd fzf procs ripgrep rustscan sd
Early Userspace:
- always load i8042 and atkbd module
Environment:
- removed bridge-utils
- added archboot-testsuite.sh
- cleaned up firmware files
- added archboot-fw-check.sh 
- removed marvell prestera firmware
cpio:
- replaced find with fd calls
update:
- removed Xorg Gnome and KDE/Plasma support
- more robust desktop installation routine
launcher:
- added chromium / firefox switch
setup:
- added user management
- added Swap file support
- added Bash / Zsh switch
- added Administrator / wheel group | User switch
- added polkit to default packages
- fixed btrfs subvolume selection
- fixed bcachefs menu cancellation
- added more descriptions to menu points
- added < and > menu points to show direction of navigation
- disabled dangerous Raid5/6 in btrfs menu
- fixed error messages in mountpoints function
- replaced sed with sd
- replaced grep with rg
- replaced find with fd
---